# fevm-integration

./: .gitignore  Makefile  README.md
contracts/: SimpleCoin.sol
testing/: Cargo.toml
testing/src/: main.rs
